--- a/src/ModuleObjects1.mxml
+++ b/src/ModuleObjects1.mxml
@@ -1,8 +1,35 @@
 <?xml version="1.0" encoding="utf-8"?>
-<s:Application xmlns:fx="http://ns.adobe.com/mxml/2009" 
-			   xmlns:s="library://ns.adobe.com/flex/spark" 
-			   xmlns:mx="library://ns.adobe.com/flex/mx" minWidth="955" minHeight="600">
+<s:Application xmlns:fx="http://ns.adobe.com/mxml/2009"
+			   xmlns:s="library://ns.adobe.com/flex/spark"
+			   xmlns:mx="library://ns.adobe.com/flex/mx"
+			   minWidth="600"
+			   minHeight="400"
+			   xmlns:dragdrop="se.cambiata.components.spark.dragdrop.*"
+			   xmlns:layouts="org.flexlayouts.layouts.*"
+			   creationComplete="init(event)"
+			   >
+	
+	<fx:Script>
+		<![CDATA[
+			import mx.core.IUIComponent;
+			import mx.events.DragEvent;
+			import mx.events.FlexEvent;
+			import mx.managers.DragManager;
+			
+			protected function init(event:FlexEvent):void
+			{
+				// TODO Auto-generated method stub
+				this.ddPanelGroup.loadXml('data.xml');
+				
+			}
+			
+		]]>
+	</fx:Script>
 	<fx:Declarations>
 		<!-- Place non-visual elements (e.g., services, value objects) here -->
 	</fx:Declarations>
+	
+	<dragdrop:DDPanelGroup id="ddPanelGroup" />
+	
+	
 </s:Application>
