added missing libraries

--- a/src/se/cambiata/components/spark/dragdrop/DDContainerBase.mxml
+++ b/src/se/cambiata/components/spark/dragdrop/DDContainerBase.mxml
@@ -13,8 +13,8 @@
 			import mx.core.IVisualElement;
 			import mx.events.FlexEvent;
 			
-			import se.cambiata.utils.StringUtils;
-			import se.cambiata.utils.calculators.IStringSim;
+			import se.cambiata.utils.string.StringUtils;
+			import se.cambiata.utils.string.calculators.IStringSim;
 			
 			import spark.skins.spark.PanelSkin;
 
